# gaia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  arbys.csv  docker-compose.yaml  notifier_architecture.excalidraw  rustfmt.toml
.github/workflows/: ghcr.yaml
.sqlx/: query-207c6021237ddefbe6871f3ec3ffaf11449358ca212b29f05338ff0cadb57600.json  query-3d87e39d338223c5a0c1252cd209074f60a4109d9b0761a7efff04ce928750b2.json  query-55d10dc6abd8c867b4253a08ead371537323986ba8d69fe90bf2ddb547631bab.json  query-a1b0188a38e0b5076ba2088614bf76f1c687129b66a9de9ba6be5f30bcce3249.json  query-c27b5a361ee5f92845ebc7794c049f958db3fd3704cd1c24fdcbbbbfec363c2d.json  query-d584f0266af384b4283223a075aedea7077c241d660a321effb6f80e98928ac5.json
migrations/: 20250808141158_init.sql
src/: closest.rs  embed_paginator.rs  emojis.rs  lib.rs  macros.rs  main.rs  paginate.rs  utils.rs
src/commands/: arbi.rs  archon_hunt.rs  event.rs  mod.rs  worldstate.rs
src/commands/market/: average.rs  mod.rs  orders.rs
src/notifier/: commands.rs  eidolon_hunts.rs  error.rs  mod.rs  model.rs  s_tier_arbitrations.rs  sp_disruption_fissure.rs
